2004-11-10  Martin Baulig  <martin@ximian.com>

	* DeflateStream.cs, GzipStream.cs: `System.IO.Stream.Length' doesn't
	have any setter.	

2004-10-02  Christopher Lahey (clahey@ximian.com)

	* DeflateStream.cs GzipStream.cs: Implemented the DeflateStream
	and GzipStream using zlib.
