@@ -180,7 +180,7 @@ namespace MonoTests.System.IO.Compression
 			byte [] data = {0x1f, 0x8b, 0x08, 0x08, 0x70, 0xbb, 0x5d, 0x41, 0x00, 0x03, 0x74, 0x65, 0x73, 0x74, 0x00, 0xf3, 0x48, 0xcd, 0xc9, 0xc9, 0xe7, 0x02, 0x00, 0x16, 0x35, 0x96, 0x31, 0x06, 0x00, 0x00, 0x00 };
 			MemoryStream backing = new MemoryStream (data);
 			GzipStream decompressing = new GzipStream (backing, CompressionMode.Decompress);
-			decompressing.Length = 20;
+			decompressing.SetLength (20);
 		}
 
 		[Test]
@@ -189,7 +189,7 @@ namespace MonoTests.System.IO.Compression
 			byte [] data = {0x1f, 0x8b, 0x08, 0x08, 0x70, 0xbb, 0x5d, 0x41, 0x00, 0x03, 0x74, 0x65, 0x73, 0x74, 0x00, 0xf3, 0x48, 0xcd, 0xc9, 0xc9, 0xe7, 0x02, 0x00, 0x16, 0x35, 0x96, 0x31, 0x06, 0x00, 0x00, 0x00 };
 			MemoryStream backing = new MemoryStream (data);
 			GzipStream decompressing = new GzipStream (backing, CompressionMode.Decompress);
-			int length = decompressing.Length;
+			long length = decompressing.Length;
 		}
 
 		[Test]
@@ -198,7 +198,7 @@ namespace MonoTests.System.IO.Compression
 			byte [] data = {0x1f, 0x8b, 0x08, 0x08, 0x70, 0xbb, 0x5d, 0x41, 0x00, 0x03, 0x74, 0x65, 0x73, 0x74, 0x00, 0xf3, 0x48, 0xcd, 0xc9, 0xc9, 0xe7, 0x02, 0x00, 0x16, 0x35, 0x96, 0x31, 0x06, 0x00, 0x00, 0x00 };
 			MemoryStream backing = new MemoryStream (data);
 			GzipStream decompressing = new GzipStream (backing, CompressionMode.Decompress);
-			int position = decompressing.Position;
+			long position = decompressing.Position;
 		}
 	}
 }
