@@ -1,3 +1,8 @@
+2004-12-03  Raja R Harinath  <rharinath@novell.com>
+
+	* System.IO.Compression/GzipStreamTest.cs: Fix compile errors.
+	* System.IO.Compression/GzipStreamTest.cs: Likewise.
+
 2004-10-04  Raja R Harinath  <rharinath@novell.com>
 
 	* System.IO.Compression/DeflateStreamTest.cs: NET_2_0 only.
